version 4.0.2
date: xx/yy/2018
  * Fixed a bug that caused an exception when configuring the Template-based Native URI Generator
  * Minor improvement to the configuration of CODA-based URI Generators, in order to accept new, unforeseen
    properties

version 4.0.1
date: 26/07/2018
  * Fixed a bug in getTopConcepts when passing a specific broader property and no narrower property

version 4.0
date: 23/07/2018
  * Update to Apache Karaf 4.2.0
  * Update to RDF4J 2.2.4
  * Integrated MAPLE (http://bitbucket.org/art-uniroma2/maple) for supporting alignment processes
  * Implemented support for semi-automatic alignment to local or remote resources on the Web
  * Creation of a Metadata Registry and its related editor
  * Extended support for OWL2
  * Support for management of datatypes
  * automatic creation of an owl:Ontology resource when this is not available
  * Enabled the refinement of label type when creating/linking a skosxl:Label
  * Implemented the management of User Groups, their constraints on ConceptSchemes and their introduction in 
    the property defaults chain
  * Enabled the possibility to specify different subproperties of skos:broader and skos:narrower properties 
    for painting the concept tree and also whether to use their subproperties and to store this setting as
    a default for users belonging to a group
  * Various improvements to the OntologyManager component (e.g. core vocabularies are no longer deleted when 
    an explicit import of them is removed)
  * Various improvements to the change tracker Sail (e.g. possibility to query the version of the Sail)
  * Enabled the possibility to edit the credentials for the repositories associated with a project
  * New Extension Management framework (partial release)
  * Introduced Advanced Search: a search with different constraints that can be setup by the user through a 
    dedicated UI
  * implemented the fuzzy search
  * SPARQL queries/updates now can be stored